Fixing contact form spacing

--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -31,6 +31,8 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    grid-auto-rows: 90px;
+    margin: 60px 0;
     height: 100vh;
 }
 
